--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "jquery": "^3.7.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "jquery": "^3.7.1",
     "react-icons": "^5.5.0",
     "react-loading-indicators": "^1.0.1",
     "react-redux": "^9.2.0",
@@ -21,16 +21,17 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@reduxjs/toolkit": "^2.10.1",
+    "@types/jquery": "^3.5.32",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "sass-embedded": "^1.89.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
-    "@types/jquery": "^3.5.32",
-    "sass-embedded": "^1.89.2",
     "vite": "^7.0.4"
   }
 }
